# omnilua

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  NOTICE  PORT_STRATEGY.md  README.md  index.html  luac.out  performance.html  styles.css
.claude/: settings.json
.claude/agents/: translator.md
.claude/hooks/: pretooluse-no-gcref-new.sh  pretooluse-type-vocab.sh  trailer-required.sh
.github/workflows/: ci.yml  npm-publish-wasm.yml  release.yml  windows-check.yml
crates/lua-cli/: Cargo.toml  README.md
crates/lua-cli/src/: interp.rs  main.rs  repl.rs
crates/lua-cli/tests/: io_errno_oracle.rs  shell_hooks.rs  traceback_oracle.rs
crates/lua-hlua-shim/: Cargo.toml
crates/lua-hlua-shim/src/: any.rs  func.rs  lib.rs
crates/lua-lex/: Cargo.toml  GRADUATED.md
crates/lua-lex/src/: lib.rs
crates/lua-rs-runtime/: Cargo.toml  README.md
crates/lua-rs-runtime/examples/: dropprobe.rs  leakprobe.rs  scope_delegate_macro.rs  scope_world.rs  size_class_histogram.rs
crates/lua-rs-runtime/src/: async_impl.rs  lib.rs  serde_impl.rs
crates/lua-rs-runtime/tests/: async_kit.rs  compiled_chunk.rs  const_fold_kit.rs  cross_version_bridge.rs  dump_kit.rs  error_display.rs  global_shadow_kit.rs  handle_identity.rs  host_coroutine.rs  leak_canaries.rs  multiversion_53.rs  multiversion_55.rs  multiversion_oracle.rs  named_registry.rs  number_seam.rs  numeric_tostring_contract.rs  panic_hook_chaining.rs  runtime_sandbox.rs  sandbox.rs  scope_delegate.rs  scope_with_derive.rs  scope_world_smoke.rs  serde_integration.rs  table_helpers.rs
crates/lua-stdlib/: Cargo.toml
crates/lua-stdlib/src/: auxlib.rs  base.rs  bit32_lib.rs  coro_lib.rs  debug_lib.rs  init.rs  io_lib.rs  lib.rs  loadlib.rs  math_lib.rs  os_lib.rs  state_stub.rs  string_lib.rs  table_lib.rs  utf8_lib.rs
crates/lua-stdlib/tests/: base_strengthen.rs  bit32_strengthen.rs  coro_strengthen.rs  debug_strengthen.rs  io_errno_fidelity_kit.rs  io_strengthen.rs  loadlib_strengthen.rs  name_metafield_version.rs  os_strengthen.rs
crates/lua-wasm/: Cargo.toml
crates/lua-wasm-smoke/: Cargo.toml
crates/lua-wasm-smoke/src/: lib.rs
crates/lua-wasm/src/: lib.rs
docs/: BACKLOG_CRUSH_CAMPAIGN_20260715.md  CURRENT_STATUS_CHECKIN.md  EMBEDDING_API_IMPLEMENTATION.md  EXACT_ROOTING_SPEC.md  IDIOMATIZATION_REFLECTION_1.md  IDIOMATIZATION_ROADMAP.md  IDIOMATIZATION_SPRINT_1_SPEC.md  IDIOMATIZATION_VM_FINDINGS.md  ISSUE_BURNDOWN_SPEC.md  LUA_PHASE_E_RUNTIME_SPEC.md  LUA_SYSTEM_DEEP_DIVE.md  MATCHING_C_PERFORMANCE.md  MEASUREMENT_PROTOCOL.md  NPM_WASM_PUBLISHING.md  PERFORMANCE_MODEL.md  PERFORMANCE_PRINCIPLES.md  PERF_113_SIZE_CLASS_ANALYSIS_20260715.md  PERF_113_SIZE_CLASS_ANALYSIS_20260715_REVIEW.md  PERF_EVIDENCE_113_W2_OWNERVEC_20260713.md  PERF_EVIDENCE_NEWIN_RC_COST_20260713.md  PERF_PUSH_SPEC.md  PERF_SPRINT_2_SPEC.md  PUBLIC_README_HANDOFF.md  PUBLISH_READINESS.md  REBRAND_SPEC.md  REDIS_PORT_HARNESS_SPEC.md  RETROSPECTIVE_AND_PRODUCTIZATION.md  SESSION_HANDOFF.md  TOOLING_EXTRACTION_IDEAS.md  WASM_HOST_BOUNDARY_SPEC.md  WINDOWS_DIVERGENCES.md
docs/stuck-tests/: gc.lua.md
examples/: README.md  coroutines.lua  errors.lua  fibonacci.lua  mandelbrot.lua  oop.lua  patterns.lua  primes.lua
harness/: check_audit_ratchet.sh  check_publish_readiness.sh  check_release_versions.mjs  check_wasm_package.sh  dispatch_compiler_fixer.sh  envelope.toml  fanout.sh  implement_loop.sh  mega_loop.sh  overnight.sh  overnight_preflight.sh  quick_file.sh  rejected-experiments.jsonl  respawn_loop.sh  stop-hook.sh  strict_guard_check.sh  unsafe-budgets.toml
harness/bench/: README.md  backfill-tests.sh  bincache.sh  build-pgo.sh  bytecode-parity-allow.txt  bytecode-parity.py  compare.sh  compare_bins.sh  gc-profile-summary.py  gc-profile.sh  history.py  instr-count.sh  measure-tests.sh  opcode-profile.sh  profile-hotspots.sh  profile-inventory.sh  scaling-check.py  table-bytes.sh  value-layout.sh  vm-execute-attribution.py  with-timeout.sh
harness/evidence/: ledger.jsonl
harness/impl/: agent-costs-O1.txt  build-O1.err  build-O2.err  build-O3.err  build-O6.err  build-O7.err  build-O8.err  debug-costs-O1.txt  debug-costs-O13.txt  debug-costs-O15.txt  debug-costs-O16.txt  debug-costs-O2.txt  debug-costs-O4.txt  debug-costs-O5.txt  debug-costs-O6.txt  debug-costs-O7.txt  iter-1-debug-1.transcript.jsonl  iter-1-load_.transcript.jsonl  iter-1-load_.translator.json  iter-1-precall_light_C_.transcript.jsonl  iter-1.build.err  iter-1.run.out  iter-10-new_lib_table_.transcript.jsonl  iter-10-set_field.transcript.jsonl  iter-10-set_field.translator.json  iter-10-top_.transcript.jsonl  iter-10-top_.translator.json  iter-10.build.err  iter-10.run.out  iter-11-table_set_with_tm.transcript.jsonl  iter-11-top_.transcript.jsonl  iter-11.run.out  iter-12-table_raw_set.transcript.jsonl  iter-12-table_raw_set.translator.json  iter-13-LuaTable::raw_set.transcript.jsonl  iter-13.build.err  iter-13.run.out  iter-14-registry_set_.transcript.jsonl  iter-14-registry_set_.translator.json  iter-14-to_boolean.transcript.jsonl  (+147 more)
harness/overnight/: attempts.tsv  state.jsonl
harness/size_class/: run.sh
harness/wasm/: README.md  browser-smoke.html  browser-smoke.mjs  lua-rs-host.mjs  runtime-smoke.mjs  smoke-scenario.mjs  unknown-smoke.mjs
reference/lua-5.3.6/: PROVENANCE.md
reference/lua-5.3.6-tests/: time.txt
reference/lua-5.5.0-tests/: time.txt
specs/: ISSUE_113_GCHEADER_DIET_SPEC.md  ISSUE_113_GCHEADER_DIET_SPEC_REVIEW_R1.md  ISSUE_113_GCHEADER_DIET_SPEC_REVIEW_R2.md  ISSUE_267_OWNER_IDENTITY_SPEC.md  ISSUE_267_OWNER_IDENTITY_SPEC_REVIEW.md  ISSUE_300_CONST_FOLDING_SPEC.md  ISSUE_304_UPVAL_GLOBAL_SHADOW_SPEC.md  MULTIVERSION_PLAYBOOK.md
specs/embedding/: 229-traceback-capture.md  230-host-coroutines.md  233-userdata-uservalues.md  234-weblua-seam-slice1.md  async-integration.md
specs/followup/: 5.1-fenv.md  5.2-numbers.md  5.2-syntax-roster.md  5.5-divergences.md  5.5-lang.md  5.5-stdlib-err.md  MULTIVERSION_COMPAT_AUDIT_2026_06_21.md  PHASE_C_REPORT.md  PHASE_D_5.2_REPORT.md  REPO_STRENGTHENING_IDEAS.md  SHARED_CORE_REPORT.md  phaseC.mjs  (+1 more)
(+276 files in other folders)
