[workspace]
resolver = "2"
members = [
    "crates/lua-types",
    "crates/lua-lex",
    "crates/lua-parse",
    "crates/lua-code",
    "crates/lua-vm",
    "crates/lua-stdlib",
    "crates/lua-gc",
    "crates/lua-coro",
    "crates/lua-cli",
    "crates/lua-cli-test-rust-module",
    "crates/lua-rs-lfs",
    "crates/lua-rs-runtime",
    "crates/lua-rs-derive",
    "crates/lua-hlua-shim",
    "crates/lua-wasm",
    "crates/lua-wasm-smoke",
]

[workspace.package]
version = "0.0.32"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "A Lua 5.4 interpreter implemented in safe Rust."
repository = "https://github.com/ianm199/lua-rs"
homepage = "https://github.com/ianm199/lua-rs"
authors = ["lua-rs contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
lua-types   = { path = "crates/lua-types", version = "0.0.32" }
lua-lex     = { path = "crates/lua-lex", version = "0.0.32" }
lua-parse   = { path = "crates/lua-parse", version = "0.0.32" }
lua-code    = { path = "crates/lua-code", version = "0.0.32" }
lua-vm      = { path = "crates/lua-vm", version = "0.0.32" }
lua-stdlib  = { path = "crates/lua-stdlib", version = "0.0.32" }
lua-gc      = { path = "crates/lua-gc", version = "0.0.32" }
lua-coro    = { path = "crates/lua-coro", version = "0.0.32" }
lua-rs-lfs  = { path = "crates/lua-rs-lfs", version = "0.0.32" }
lua-rs-runtime = { path = "crates/lua-rs-runtime", version = "0.0.32" }
lua-rs-derive = { path = "crates/lua-rs-derive", version = "0.0.32" }
lua-wasm = { path = "crates/lua-wasm", version = "0.0.32" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
