[workspace]
resolver = "2"
members = [
    "crates/lua-types",
    "crates/lua-lex",
    "crates/lua-parse",
    "crates/lua-code",
    "crates/lua-vm",
    "crates/lua-stdlib",
    "crates/lua-gc",
    "crates/lua-coro",
    "crates/lua-cli",
    "crates/lua-cli-test-rust-module",
    "crates/lua-rs-lfs",
    "crates/lua-rs-runtime",
    "crates/lua-rs-derive",
    "crates/lua-hlua-shim",
    "crates/lua-wasm",
    "crates/lua-wasm-smoke",
]
exclude = [
    "examples/bevy",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "Every Lua, everywhere — pure-Rust Lua 5.1–5.5, suite-passing, LuaRocks-compatible, wasm-ready."
repository = "https://github.com/ianm199/omnilua"
homepage = "https://github.com/ianm199/omnilua"
authors = ["omniLua contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
lua-types   = { path = "crates/lua-types", version = "0.4.0" }
lua-lex     = { path = "crates/lua-lex", version = "0.4.0" }
lua-parse   = { path = "crates/lua-parse", version = "0.4.0" }
lua-code    = { path = "crates/lua-code", version = "0.4.0" }
lua-vm      = { path = "crates/lua-vm", version = "0.4.0" }
lua-stdlib  = { path = "crates/lua-stdlib", version = "0.4.0", default-features = false }
lua-gc      = { path = "crates/lua-gc", version = "0.4.0" }
lua-coro    = { path = "crates/lua-coro", version = "0.4.0" }
lua-rs-lfs  = { path = "crates/lua-rs-lfs", version = "0.4.0" }
omnilua     = { path = "crates/lua-rs-runtime", version = "0.4.0", default-features = false }
lua-rs-derive = { path = "crates/lua-rs-derive", version = "0.4.0" }
lua-wasm = { path = "crates/lua-wasm", version = "0.4.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
