[package]
name = "lua-cli"
version.workspace = true
description = "The lua-rs command-line interpreter: Lua 5.4 in safe Rust."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

# Phase D-3.5: lua-cli now hosts the libloading-backed dynamic library
# backend. `libloading` is FFI and unavoidably uses `unsafe`; the workspace
# `unsafe_code = "forbid"` is overridden locally. Each unsafe block carries a
# `// SAFETY: ...` comment; per-crate ceiling lives in
# `harness/unsafe-budgets.toml`.
[lints.rust]
unsafe_code = "allow"

[[bin]]
name = "lua-rs"
path = "src/main.rs"

[dependencies]
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib.workspace = true
lua-parse.workspace = true
lua-rs-lfs.workspace = true
libloading = "0.9"
rustyline = "14"
