[package]
name = "lua-rs-hlua-shim"
version.workspace = true
description = "Drop-in replacement for the `hlua` 0.4 embedding API, backed by the pure-Rust omniLua VM. Lets hlua-based consumers (authoscope, sn0int) run on omniLua behind a feature flag."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "lua_rs_hlua_shim"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
lua-gc.workspace = true
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib = { workspace = true, features = ["full"] }
lua-parse.workspace = true
