[package]
name = "lua-lex"
version.workspace = true
description = "omniLua's Lua lexer — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
lua-types.workspace = true
lua-vm.workspace = true

[dev-dependencies]
lua-gc.workspace = true
