[package]
name = "lua-rs-runtime"
version.workspace = true
description = "Embed Lua 5.4 in Rust: handles, userdata, and scoped borrows. Pure safe Rust, no C, runs in WebAssembly."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lints.rust]
unsafe_code = "allow"

[features]
# Re-export the derive macros (LuaUserData, lua_methods) from this crate.
derive = ["dep:lua-rs-derive"]

[[example]]
name = "scope_delegate_macro"
required-features = ["derive"]

[dependencies]
lua-gc.workspace = true
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib.workspace = true
lua-parse.workspace = true
lua-rs-derive = { workspace = true, optional = true }
