[package]
name = "omnilua"
version.workspace = true
description = "Every Lua, everywhere — pure-Rust Lua 5.1–5.5, suite-passing, LuaRocks-compatible, wasm-ready."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
name = "omnilua"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "allow"

[features]
default = ["full"]
# `full` enables every standard library — the current, default behavior.
# A sandboxed/embedded host (e.g. Valdr/EdgeStash on wasm) builds with
# `default-features = false` and re-enables only the subset it exposes; the
# fs/loader/OS modules it forbids are then never compiled or linked. Each knob
# forwards to the matching `lua-stdlib` feature.
full = ["io", "os", "package", "debug", "coroutine", "utf8", "bit32"]
io = ["lua-stdlib/io"]
os = ["lua-stdlib/os"]
package = ["lua-stdlib/package"]
debug = ["lua-stdlib/debug"]
coroutine = ["lua-stdlib/coroutine"]
utf8 = ["lua-stdlib/utf8"]
bit32 = ["lua-stdlib/bit32"]
# Re-export the derive macros (LuaUserData, lua_methods) from this crate.
derive = ["dep:lua-rs-derive"]
# serde integration: `LuaSerdeExt::to_value` / `from_value`. Pure-Rust, wasm-safe.
serde = ["dep:serde"]
# async host functions + driver (create_async_function / call_async). Built on the
# coroutine machinery (so it requires it); pure-std, executor-agnostic, no deps.
async = ["coroutine"]

[[example]]
name = "scope_delegate_macro"
required-features = ["derive"]

[dependencies]
lua-gc.workspace = true
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib = { workspace = true }
lua-parse.workspace = true
lua-rs-derive = { workspace = true, optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
